# NdkStudy

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/frank/ndkstudy/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/frank/ndkstudy/: MainActivity.kt
app/src/main/res/values/: strings.xml
app/src/test/java/com/frank/ndkstudy/: ExampleUnitTest.kt
lamelibrary/: build.gradle
lamelibrary/src/androidTest/java/com/frank/lamelibrary/: ExampleInstrumentedTest.kt
lamelibrary/src/main/: AndroidManifest.xml
lamelibrary/src/main/cpp/: AudioLib.cpp  CMakeLists.txt  Mp3Encoder.c  Mp3Encoder.h
lamelibrary/src/main/cpp/include/lame/: Makefile.am  Makefile.in  VbrTag.c  lame.c  lame.h  lame_global_flags.h  lameerror.h  mpglib_interface.c  newmdct.c  psymodel.c  reservoir.c  set_get.c  takehiro.c  util.c  util.h  version.h
lamelibrary/src/main/java/com/frank/lamelibrary/: AudioAct.kt  MP3Encoder.kt
lamelibrary/src/main/res/layout/: act_audio.xml
lamelibrary/src/test/java/com/frank/lamelibrary/: ExampleUnitTest.kt
myndkmodule/: CMakeLists.txt  build.gradle
myndkmodule/src/androidTest/java/com/frank/myndkmodule/: ExampleInstrumentedTest.kt
myndkmodule/src/main/: AndroidManifest.xml
myndkmodule/src/main/cpp/: FirstCFile.cpp  FirstCFile.h
myndkmodule/src/main/java/com/frank/myndkmodule/: RootClass.kt  TestAct.kt
myndkmodule/src/main/res/layout/: act_test.xml
myndkmodule/src/main/res/values/: strings.xml
(+1 files in other folders)
